# stm32-legacy-boot

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
firmware/: CMakeLists.txt  STM32C071K8TX_FLASH.ld  main.c
firmware/cmake/: git-version-gen.cmake
firmware/cmake/cpack/: install_version.cmake.in
firmware/cmake/cpack/files/: README.txt.in
include/: legacy-boot.h
src/: legacy-boot.c
